<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreditFragment"
    android:background="@color/teal_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="160dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:padding="16dp"
            android:text="About SailSal"
            android:textColor="@color/purple_700"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="First Fragment"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            android:textStyle="bold"
             />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:paddingVertical="16dp"
            android:src="@drawable/first" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper2"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper3"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper4"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper5"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper6"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper7"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Second Fragment"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:paddingVertical="16dp"
            android:src="@drawable/second"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper8"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper9"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper10"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper11"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper12"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper13"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Third Fragment"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:paddingVertical="16dp"
            android:src="@drawable/third1"
            />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:paddingVertical="16dp"
            android:src="@drawable/third2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper14"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Fourth Fragment"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:paddingVertical="16dp"
            android:src="@drawable/fourth"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper15"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper16"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/helper17"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>