<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_100"
    tools:context=".SecondFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/basic"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginRight="50dp"
        android:hint="@string/basic"
        android:textColorHint="@color/black"
        app:boxCollapsedPaddingTop="10dp"
        app:boxStrokeColor="#250273"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_700"
        app:helperText="As On December/2016"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/basic_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="34dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/grade"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginRight="50dp"
        android:hint="@string/grade"
        android:textColorHint="@color/black"
        app:boxCollapsedPaddingTop="10dp"
        app:boxStrokeColor="#250273"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_700"
        app:helperText="As On December/2016"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/grade_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="number"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="120dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/da"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="226dp"
        android:layout_marginRight="50dp"
        android:hint="@string/da"
        android:textColorHint="@color/black"
        app:boxCollapsedPaddingTop="10dp"
        app:boxStrokeColor="#250273"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_700"
        app:helperText="As On January/2017"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/da_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="40.1"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="202dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mgb"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="326dp"
        android:layout_marginRight="50dp"
        android:hint="@string/mgb"
        android:textColorHint="@color/black"
        app:boxCollapsedPaddingTop="10dp"
        app:boxStrokeColor="#250273"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_700"
        app:helperText="As Per The agreement"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mgb_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="13"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="304dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/perk"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="426dp"
        android:layout_marginRight="50dp"
        android:hint="@string/perk"
        android:textColorHint="@color/black"
        app:boxCollapsedPaddingTop="10dp"
        app:boxStrokeColor="#250273"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconTint="@color/purple_700"
        app:endIconMode="clear_text"
        app:helperText="As Per The Agreement"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/perk_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="373dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="NEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perk" />

</androidx.constraintlayout.widget.ConstraintLayout>